Wed Jul 13 03:57:54 1994  Jason Merrill  (jason@deneb.cygnus.com)

        * cp-tree.h (TYPE_NEEDS_CONSTRUCTING): #if 0 out; this macro is now
        defined in the language-independent tree.h.

        * tree.c (count_functions): Avoid bogus warning when compiling this
        function.

Mon Jul 11 18:37:20 1994  Jason Merrill  (jason@deneb.cygnus.com)

        * decl.c (grok_reference_init): Always save the initializer of a
        reference.

Fri Jul  8 17:41:46 1994  Mike Stump  (mrs@cygnus.com)

	* decl.c (cplus_expand_expr_stmt): Wrap statement expressions inside
	CLEANUP_POINT_EXPRs so that the stack slots can be reused.
	(disabled for now)

Fri Jul  8 12:59:38 1994  Jason Merrill  (jason@deneb.cygnus.com)

	* method.c (hack_identifier): Fix for new overloading.

	* typeck.c (build_binary_op_nodefault): Don't mess with division by
        zero.

Fri Jul  8 13:20:28 1994  Gerald Baumgartner  (gb@cs.purdue.edu)

	* decl2.c (finish_file): Only call walk_sigtables, if
	flag_handle_signatures is turned on, don't waste time otherwise.

Fri Jul  8 02:27:41 1994  Jason Merrill  (jason@deneb.cygnus.com)

	* decl.c (push_overloaded_decl): Don't create overloads of one when
	shadowing a class type.
	* typeck.c (build_x_function_call): Complain about overloads of one

	* decl.c (grokdeclarator): Don't try to treat a char* as a tree.
	(grokdeclarator): Fix setting of TREE_STATIC.
	(start_decl): Clear DECL_IN_AGGR_P after calling duplicate_decls.

Thu Jul  7 22:20:46 1994  Gerald Baumgartner  (gb@andros.cygnus.com)

	* cp-tree.h (walk_sigtables): Created extern declaration.
	* decl2.c (walk_sigtables): Created function, patterned after
	walk_vtables, even though we only need it to write out sigtables.
	(finish_sigtable_vardecl): Created function.
	(finish_vtable_vardecl): Changed 0 to NULL_PTR.
	(finish_file): Call walk_sigtables.

	* sig.c (build_signature_table_constructor): Mark class member
	function pointed to from signature table entry as addressable.
